Use GCC 12 and QEMU 9.1.0

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ build_x86:
   script:
     - echo "Building for x86..."
     - mkdir -p build_x86 && cd build_x86
-    - cmake .. -DHWY_WARNINGS_ARE_ERRORS:BOOL=ON -DCMAKE_BUILD_TYPE=Release
+    - CC=gcc-12 CXX=g++-12 cmake .. -DHWY_WARNINGS_ARE_ERRORS:BOOL=ON -DCMAKE_BUILD_TYPE=Release
     - make -j
     - cd ..
   artifacts:
@@ -19,7 +19,7 @@ build_arm8:
     - echo "Building for ARMv8..."
     - mkdir build_arm8 && cd build_arm8
     - export QEMU_LD_PREFIX=/usr/aarch64-linux-gnu
-    - CC=aarch64-linux-gnu-gcc-11 CXX=aarch64-linux-gnu-g++-11 cmake .. -DHWY_WARNINGS_ARE_ERRORS:BOOL=ON -DCMAKE_BUILD_TYPE=Release -DCMAKE_CROSSCOMPILING_EMULATOR=/usr/bin/qemu-aarch64
+    - CC=aarch64-linux-gnu-gcc-12 CXX=aarch64-linux-gnu-g++-12 cmake .. -DHWY_WARNINGS_ARE_ERRORS:BOOL=ON -DCMAKE_BUILD_TYPE=Release -DCMAKE_CROSSCOMPILING_EMULATOR=/usr/bin/qemu-aarch64
     - make -j
     - cd ..
   artifacts:
